Fix info z-index

--- a/src/views/Dashboard/treasury-dashboard.scss
+++ b/src/views/Dashboard/treasury-dashboard.scss
@@ -1,4 +1,7 @@
 @import 'styles/_colors.scss';
+#info-tooltip {
+  z-index: 10;
+}
 
 #treasury-dashboard-view {
   overflow-y: hidden;
